@@ -1,4 +1,7 @@
 1.2.3i7p1:
+    Core & Setup:
+    * 0087 FIX: Fixed possible locking issue when using datasource program with long output...
+
     Checks & Agents:
     * 0103 FIX: services: Fixed bug with service inventory defined in main.mk...
     * 0299 FIX: borcade_mlx_fan: Prettified output, handling "other" state now
